workloads/canary-app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: canary
spec:
  replicas: 10
  revisionHistoryLimit: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy:
    canary:
      # Add revision labels to stable and canary pods
      stableMetadata:
        labels:
          role: stable
      canaryMetadata:
        labels:
          role: canary
      analysis:
        startingStep: 2 # delay starting analysis run until we have collected enough metrics
        args:
        - name: service-name
          value: rollouts-demo-canary.canary.svc.cluster.local
        - name: stable-pod-label
          value: app=rollouts-demo,role=stable
        - name: canary-pod-label
          value: app=rollouts-demo,role=canary
        - name: namespace
          value: canary
        - name: canary-pod
          valueFrom:
            podTemplateHashValue: Latest
        templates:
          #- templateName: success-rate
          - templateName: ai-analysis-agent
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        istio:
          virtualService:
            name: rollout-vsvc
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: { duration: 20s } # 20 seconds to start gathering metrics before starting analysis
      - setWeight: 30
      - pause: { duration: 60s } # 60 seconds to let the analysis do its job
      - setWeight: 60
      - pause: { duration: 20s } # if everything is going well, continue rolling out
      - setWeight: 100
      - pause: { duration: 10s } # finish rolling out to everyone
